--- a/templates/template.html
+++ b/templates/template.html
@@ -39,17 +39,21 @@
 <body>
     <header>
         <div class="container">
-            <h1>Job Titles</h1>
+            <h1>Market Sector News</h1>
         </div>
     </header>
 
     <div class="container">
-        <h2>Available Jobs</h2>
+        <h2>Financials</h2>
         <ul>
             {% for job in jobs %}
                 <li>{{ job }}</li>
             {% endfor %}
         </ul>
+        <h2>Biotechology</h2>
+        <h2>Energy</h2>
+        <h2>Real Estate</h2>
+        <h2>Consumer Goods</h2>
     </div>
 
     <footer>
