--- a/templates/template.html
+++ b/templates/template.html
@@ -46,11 +46,10 @@
     <div class="container">
         <h2>Financials</h2>
         <ul>
-            {% for job in jobs %}
-                <li>{{ job }}</li>
-            {% endfor %}
+                <li>{{ summary }}</li>
         </ul>
         <h2>Biotechology</h2>
+        
         <h2>Energy</h2>
         <h2>Real Estate</h2>
         <h2>Consumer Goods</h2>
