--- a/templates/template.html
+++ b/templates/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Job Titles from Real Python</title>
+    <title>Updated Market Sector News</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,7 +50,7 @@
                 <li>{{ item }}</li>
             {% endfor %}
         </ul>
-
+            <a href="https://finance.yahoo.com/tech/">Visit Yahoofinance.com!</a>
         <h2>Biotechology</h2>
         <ul>
             {% for x in summary %}
