--- a/templates/template.html
+++ b/templates/template.html
@@ -4,7 +4,7 @@
     <title>Updated Market Sector News</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', serif;
             margin: 0;
             padding: 0;
             background: #ffffff;
